...
              ),
              selectedIcon: Icon(Icons.shelves, color: colorScheme.onSurface),
              label: appLocalizations.generalBookshelf,
              enabled: !state.navItem.isBookshelf && state.isEnabled,
            ),
            NavigationDestination(
              key: const ValueKey<String>('homepage_explore'),
              icon: ExploreBrowserIcon.outlined(
                color: unselectedColor,
              ),
              selectedIcon: ExploreBrowserIcon(
                color: colorScheme.onSurface,
              ),
...
